unpackaged/main/default/objects/Product2/fields/Additional_Quantity_Price__c.field-meta.xml
<CustomField>
    <fullName>Additional_Quantity_Price__c</fullName>
    <label>Additional Quantity Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>