unpackaged/main/default/objects/Product2/fields/Additional_Quantity_Pricing_Component__c.field-meta.xml
<CustomField>
    <fullName>Additional_Quantity_Pricing_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Quantity Pricing Component</label>
    <type>Checkbox</type>
</CustomField>