unpackaged/main/default/objects/Product2/fields/Additional_Quantity_Product__c.field-meta.xml
<CustomField>
    <fullName>Additional_Quantity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This product is used if the quantity is above the additional quantity threshold.</description>
    <inlineHelpText>This product is used if the quantity is above the additional quantity threshold.</inlineHelpText>
    <label>Additional Quantity Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Products (Additional Quantity Product)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>