unpackaged/main/default/objects/Product2/fields/Dynamic_Quantity_Price__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Quantity_Price__c</fullName>
    <label>Dynamic Quantity Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>