unpackaged/main/default/objects/Product2/fields/Dynamic_Quantity_Pricing_Component__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Quantity_Pricing_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dynamic Quantity Pricing Component</label>
    <type>Checkbox</type>
</CustomField>