unpackaged/main/default/objects/Product2/fields/Dynamic_Quantity_Product__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Quantity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This product is used if the quantity is above the dynamic quantity threshold.</description>
    <inlineHelpText>This product is used if the quantity is above the dynamic quantity threshold.</inlineHelpText>
    <label>Dynamic Quantity Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Products (Dynamic Quantity Product)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>