unpackaged/main/default/objects/Product2/fields/ia_crm__Billing_method__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billing_method__c</fullName>
    <label>Billing method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed price</fullName>
            </value>
            <value>
                <fullName>Quantity based</fullName>
            </value>
            <value>
                <fullName>Project T&amp;M</fullName>
                <label>Project time &amp; materials</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>