unpackaged/main/default/objects/Product2/fields/ia_crm__Billing_Template__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billing_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Billing_Template__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>ia_crm__Billing_Template__c.ia_crm__Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Billing_Template__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>