unpackaged/main/default/objects/Product2/fields/ia_crm__Description_On_Sales_Transactions__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Description_On_Sales_Transactions__c</fullName>
    <label>Description On Sales Transactions</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>