unpackaged/main/default/objects/Product2/fields/ia_crm__Flat_fixed_amount_frequency__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Flat_fixed_amount_frequency__c</fullName>
    <label>Flat/fixed amount frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Use billing template</fullName>
            </value>
            <value>
                <fullName>Include with every invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>