unpackaged/main/default/objects/Product2/fields/ia_crm__Item_tax_group__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Item_tax_group__c</fullName>
    <label>Item tax group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Tax Group</fullName>
            </value>
            <value>
                <fullName>Not taxable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>