unpackaged/main/default/objects/Product2/fields/ia_crm__Item_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Inventory (Sales only)</fullName>
            </value>
            <value>
                <fullName>Non-Inventory</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Kit</fullName>
            </value>
            <value>
                <fullName>Stockable Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>