unpackaged/main/default/objects/Product2/fields/ia_crm__MRR__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__MRR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MRR</label>
    <type>Checkbox</type>
</CustomField>