unpackaged/main/default/objects/Product2/fields/ia_crm__Sync_with_Intacct__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sync_with_Intacct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync With Intacct</label>
    <type>Checkbox</type>
</CustomField>