unpackaged/main/default/objects/Product2/fields/Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Method__c</fullName>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Application</fullName>
            </value>
            <value>
                <fullName>Per Site</fullName>
            </value>
            <value>
                <fullName>Dynamic Quantity Price</fullName>
            </value>
            <value>
                <fullName>Additional Quantity Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>