unpackaged/main/default/objects/Product2/fields/Quantity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Threshold__c</fullName>
    <label>Quantity Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>