unpackaged/main/default/objects/Product2/fields/Sage_50_Nominal_A_C__c.field-meta.xml
<CustomField>
    <fullName>Sage_50_Nominal_A_C__c</fullName>
    <label>Sage 50 Nominal A/C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>