unpackaged/main/default/objects/Product2/fields/Species_Discount_Extra__c.field-meta.xml
<CustomField>
    <fullName>Species_Discount_Extra__c</fullName>
    <label>Species Discount Extra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>