unpackaged/main/default/objects/Product2/validationRules/ia_crm__Cost_Method_Required_Inventory.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Cost_Method_Required_Inventory</fullName>
    <active>true</active>
    <description>Cost Method should be required if item type is inventory.</description>
    <errorConditionFormula>AND( ISPICKVAL(ia_crm__Item_Type__c, &#39;Inventory&#39;),  IsPICKVAL( ia_crm__Cost_Method__c, &#39;&#39; ) )</errorConditionFormula>
    <errorMessage>Cost method is required for Inventory products.</errorMessage>
</ValidationRule>