unpackaged/main/default/objects/Product2/validationRules/Sage_50_Nominal_AC_must_be_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Sage_50_Nominal_AC_must_be_numeric</fullName>
    <active>false</active>
    <description>Sage 50 Nominal AC must be numeric</description>
    <errorConditionFormula>NOT(ISNUMBER(Sage_50_Nominal_A_C__c))</errorConditionFormula>
    <errorDisplayField>Sage_50_Nominal_A_C__c</errorDisplayField>
    <errorMessage>Sage 50 Nominal AC must be numeric.</errorMessage>
</ValidationRule>