unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Business__c</columns>
    <columns>Animal__c</columns>
    <columns>Production__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Pricing_Method__c</columns>
    <columns>Sage_50_Nominal_A_C__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ia_crm__Intacct_Sync_Status_Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>